@@ -1,3 +1,9 @@
+Fri  Sep 10  2004	H. Wade Minter (minter@lunenburg.org)
+     * Fixed a bug in the delete_categories function that was causing
+       an extra space to get added to the category code.
+     * DBD::SQLite has apparently grown a $sth->rows function recently,
+       so refactor the get_rows subroutine to be cleaner.
+
 Thu  Sep 9  2004	H. Wade Minter (minter@lunenburg.org)
      * Move the default setup stuff (formerly in quicksetup.pl) into the
        main program, since we don't have to deal with the complexity of
